# DinoSecurities

./: .gitignore  .vercelignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  MAINNET_DEPLOY.md  README.md  SECURITY.md  TERMS.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
docs/tech-roadmap/: style.css  tech-roadmap.md
programs/: Anchor.toml  package-lock.json  package.json
programs/programs/dino_transfer_hook/: Cargo.toml
programs/programs/dino_transfer_hook/src/: lib.rs
programs/scripts/: deploy-mainnet.sh  init-platform-mainnet.ts  init-platform.ts  reset-oracle.ts  smoke-test.ts  transfer-upgrade-authority.sh
programs/tests/: dino_core.spec.ts  dino_governance.spec.ts
server/: .env.example  Dockerfile  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
server/src/: context.ts  env.ts  index.ts  trpc.ts
src/: App.tsx  index.css  main.tsx  polyfills.ts
src/components/: ApiKeysPanel.tsx  ClickToVerifyStat.tsx  ConcentrationCard.tsx  DinoTierBadge.tsx  DocVerificationBadge.tsx  HandleClaimPanel.tsx  HolderGeoMap.tsx  HolderName.tsx  IssuerBrandingPanel.tsx  NonSecurityBanner.tsx  PaymentBadges.tsx  SanctionsStatusPanel.tsx  SeriesSupportBadge.tsx  VerificationPanel.tsx  XrplWhitelistRequestsPanel.tsx
src/hooks/: useComplianceSimulation.ts  useDinoBalance.ts  useDinoCore.ts  useDinoHandles.ts  useDisplayName.ts  useDocVerification.ts  useGovernance.ts  useHolderBalances.ts  useHolderRecord.ts  useHoldersForMint.ts  useIndexedSecurities.ts  useMySettlements.ts  (+8 more)
(+130 files in other folders)
